let rhn_register to be executed into AAP

--- a/roles/rhn-subscription/tasks/main.yml
+++ b/roles/rhn-subscription/tasks/main.yml
@@ -16,7 +16,8 @@
 - name: "register System with RHN Subscription Manager"
   community.general.redhat_subscription:
     server_hostname: "{{ satellite_hostname | default(omit) }}"
-    server_insecure: "{{ (satellite_insecure | bool) | default(omit) }}"
+    # server_insecure: "{{ satellite_insecure | default(True) }}"
+    server_insecure: True
     state: present
     username: "{{ rhn_user | default(satellite_username) | default(omit) }}"
     password: "{{ rhn_pwd | default(satellite_password) | default(omit) }}"
