--- a/check_sat_reg.yaml
+++ b/check_sat_reg.yaml
@@ -7,9 +7,7 @@
     - name: "Get the hosts from Satellite"
       ansible.builtin.uri:
         validate_certs: "{{ not (satellite_insecure | bool) }}"
-        url_username: "read_hosts"
-        url_password: "lghKLRcuiPnIAK0WeTp8eA"
-        url: "https://{{ satellite_hostname }}/api/v2/hosts/{{ current_vm_item.name }}"
+        url: "https://read_hosts:lghKLRcuiPnIAK0WeTp8eA@{{ satellite_hostname }}/api/v2/hosts/{{ current_vm_item.name }}"
       loop: "{{ vms_to_check }}"
       loop_control:
         loop_var: current_vm_item
