--- a/check_sat_reg.yaml
+++ b/check_sat_reg.yaml
@@ -7,9 +7,9 @@
     - name: "Get the hosts from Satellite"
       ansible.builtin.uri:
         validate_certs: "{{ not (satellite_insecure | bool) }}"
-        url: "https://read_hosts:lghKLRcuiPnIAK0WeTp8eA@{{ satellite_hostname }}/api/v2/hosts/{{ current_vm_item.name }}"
+        url: "https://read_hosts:lghKLRcuiPnIAK0WeTp8eA@{{ satellite_hostname }}/api/v2/hosts/{{ current_vm_item.value.name }}"
         force_basic_auth: true
-      loop: "{{ vms_to_check }}"
+      loop: "{{ guests | dict2items }}"
       loop_control:
         loop_var: current_vm_item
 
