--- a/kvm.yml
+++ b/kvm.yml
@@ -40,4 +40,6 @@
       guests: "{{ guest_list }}"
 
 - ansible.builtin.import_playbook: rhn_register.yml
-  when: skip_rhn_register is not defined or not (skip_rhn_register | bool)
+  when:
+    - skip_rhn_register is not defined or not (skip_rhn_register | bool)
+    - sat_register is not defined or not (sat_register | bool)
