--- a/kvm.yml
+++ b/kvm.yml
@@ -45,6 +45,8 @@
       loop:
         - skip_rhn_register
         - sat_register
+      loop_control:
+        loop_var: current_var
 
 - ansible.builtin.import_playbook: rhn_register.yml
   when:
