--- a/check_sat_reg.yaml
+++ b/check_sat_reg.yaml
@@ -4,13 +4,16 @@
   connection: local
   gather_facts: false
   tasks:
-    - name: "Get the hosts from Satellite"
-      ansible.builtin.uri:
-        validate_certs: "{{ not (satellite_insecure | bool) }}"
-        url: "https://read_hosts:lghKLRcuiPnIAK0WeTp8eA@{{ satellite_hostname }}/api/v2/hosts/{{ current_vm_item.value.fqdn }}"
-        force_basic_auth: true
-      loop: "{{ guests | dict2items }}"
-      loop_control:
-        loop_var: current_vm_item
-
+    - when:
+        - sat_register is defined
+        - sat_register | bool
+      block:
+        - name: "Get the hosts from Satellite"
+          ansible.builtin.uri:
+            validate_certs: "{{ not (satellite_insecure | bool) }}"
+            url: "https://read_hosts:lghKLRcuiPnIAK0WeTp8eA@{{ satellite_hostname }}/api/v2/hosts/{{ current_vm_item.value.fqdn }}"
+            force_basic_auth: true
+          loop: "{{ guests | dict2items }}"
+          loop_control:
+            loop_var: current_vm_item
 ...
