--- a/inventory.yaml
+++ b/inventory.yaml
@@ -3,15 +3,8 @@ local:
     hosts:
         localhost:
             ansible_connection: local
-pgoku:
+satellite_clients:
     hosts:
-        pgoku:
+        rhel83.iam.lab:
             ansible_connection: local
-rhn:
-    hosts:
-        capsule1:
-            ansible_connection: ssh
-            ansible_ssh_host: 192.168.122.101
-            ansible_ssh_private_key_file: /home/pgoku/.ssh/pgoku.key
-            ansible_ssh_user: pgoku
 ...
