--- a/configs/Satellite Register/credentials/15_Satellite Custom.yaml
+++ b/configs/Satellite Register/credentials/15_Satellite Custom.yaml
@@ -1,8 +1,8 @@
 ---
 controller_credentials:
-  - name: "Satellite Custom"
+  - name: "Satellite Register - Satellite Custom"
     description: ""
-    credential_type: "Satellite Custom"
+    credential_type: "Satellite Register - Satellite Custom"
     organization: "Satellite Register"
     inputs:
       ak: ''
