--- a/configs/Satellite Register/credentials/4_pgoku_github.yaml
+++ b/configs/Satellite Register/credentials/4_pgoku_github.yaml
@@ -1,6 +1,6 @@
 ---
 controller_credentials:
-  - name: "pgoku_github"
+  - name: "Satellite Register - pgoku_github"
     description: ""
     credential_type: "Source Control"
     organization: "Satellite Register"
