--- a/configs/Satellite Register/credentials/5_Vault.yaml
+++ b/configs/Satellite Register/credentials/5_Vault.yaml
@@ -1,6 +1,6 @@
 ---
 controller_credentials:
-  - name: "Vault"
+  - name: "Satellite Register - Vault"
     description: ""
     credential_type: "Vault"
     organization: "Satellite Register"
