--- a/configs/Satellite Register/credentials/6_pgoku.yaml
+++ b/configs/Satellite Register/credentials/6_pgoku.yaml
@@ -1,6 +1,6 @@
 ---
 controller_credentials:
-  - name: "pgoku"
+  - name: "Satellite Register - pgoku"
     description: ""
     credential_type: "Machine"
     organization: "Satellite Register"
