--- a/configs/Satellite Register/credentials/9_Satellite.yaml
+++ b/configs/Satellite Register/credentials/9_Satellite.yaml
@@ -1,11 +1,11 @@
 ---
 controller_credentials:
-  - name: "Satellite"
+  - name: "Satellite Register - Satellite"
     description: ""
-    credential_type: "Red Hat Satellite 6"
+    credential_type: "Satellite Register - Satellite Custom"
     organization: "Satellite Register"
     inputs:
-      host: https://satellite.bcnconsulting.com/
+      hostname: satellite.bcnconsulting.com
       password: ''
       username: admin
 
