--- a/configs/Satellite Register/inventories/pgoku/2_pgoku.yaml
+++ b/configs/Satellite Register/inventories/pgoku/2_pgoku.yaml
@@ -1,6 +1,6 @@
 ---
 controller_inventories:
-  - name: "pgoku"
+  - name: "Satellite Register - pgoku"
     description: ""
     organization: "Satellite Register"
     host_filter: ""
