--- a/configs/current_credential_types.yaml
+++ b/configs/current_credential_types.yaml
@@ -1,16 +1,16 @@
 ---
 controller_credential_types:
-  - name: "Satellite Custom"
+  - name: "Satellite Register - Satellite Custom"
     description: ""
     kind: "cloud"
     inputs:
       fields:
       - id: hostname
-        label: Satellite Host
+        label: Satellite Register - Satellite Host
         secret: false
         type: string
       - id: insecure
-        label: Satellite Insecure
+        label: Satellite Register - Satellite Insecure
         type: boolean
       - id: organization
         label: Organization
