--- a/ansible.cfg
+++ b/ansible.cfg
@@ -140,7 +140,7 @@ timeout = 30
 # if passing --private-key to ansible or ansible-playbook
 #private_key_file = /path/to/file
 
-# If set, configures the path to the Vault password file as an alternative to
+# If set, configures the path to the Satellite Register - Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
 #vault_password_file = /path/to/vault_password_file
 
