--- a/configs/Satellite Register/job_templates/13_Satellite Register.yaml
+++ b/configs/Satellite Register/job_templates/13_Satellite Register.yaml
@@ -1,10 +1,10 @@
 ---
 controller_templates:
-  - name: "Satellite Register"
+  - name: "Satellite Register - Satellite Register"
     description: ""
     organization: "Satellite Register"
-    project: "Workflows Project"
-    inventory: "pgoku"
+    project: "Satellite Register - Project"
+    inventory: "Satellite Register - pgoku"
     playbook: "sat_register.yaml"
     scm_branch: ""
     forks: 0
@@ -14,9 +14,9 @@ controller_templates:
     job_slice_count: 1
     use_fact_cache: False
     credentials:
-      - "Satellite Custom"
-      - "Vault"
-      - "pgoku"
+      - "Satellite Register - Satellite Custom"
+      - "Satellite Register - Vault"
+      - "Satellite Register - pgoku"
     allow_simultaneous: False
     ask_scm_branch_on_launch: False
     ask_diff_mode_on_launch: False
