--- a/ping.yaml
+++ b/ping.yaml
@@ -7,8 +7,8 @@
       ansible.builtin.add_host:
         hostname: "{{ current_vm_item.name }}"
         groups: "vms_to_check"
-        ansible_ssh_user: "pgoku"
-        ansible_ssh_private_key_file: "/home/pgoku/.ssh/pgoku.key"
+        ansible_ssh_user: "Satellite Register - pgoku"
+        ansible_ssh_private_key_file: "/home/pgoku/.ssh/Satellite Register - pgoku.key"
         ansible_ssh_host: '{{ current_vm_item.ip }}'
         # ansible_ssh_port: '{{ new_port }}'
       loop: "{{ vms_to_check }}"
