--- a/rhn_register.yml
+++ b/rhn_register.yml
@@ -9,8 +9,8 @@
           ansible.builtin.add_host:
             hostname: "{{ current_guest_item.value.fqdn }}"
             groups: "rhn"
-            ansible_ssh_user: "pgoku"
-            ansible_ssh_private_key_file: "/home/pgoku/.ssh/pgoku.key"
+            ansible_ssh_user: "Satellite Register - pgoku"
+            ansible_ssh_private_key_file: "/home/pgoku/.ssh/Satellite Register - pgoku.key"
             ansible_ssh_host: '{{ current_guest_item.value.address }}'
             # ansible_ssh_port: '{{ new_port }}'
           loop: "{{ guests | dict2items }}"
